# ngi

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
res/assignment_shaders/: 1.vert.glsl  2.frag.glsl  2.vert.glsl  6.frag.glsl  6.vert.glsl  7.vert.glsl  7_diff.frag.glsl  7_diff_cat.frag.glsl  7_disp.frag.glsl  7_lighting.frag.glsl  7_norm.frag.glsl  7_parallax.frag.glsl  7_parallax.vert.glsl  7_parallax_cat.frag.glsl  assignment1.frag.glsl  circle.2.frag.glsl  default.2.frag.glsl  default3.frag.glsl  dog.6.frag.glsl  glyph1_3.frag.glsl  glyph2_3.frag.glsl  glyph3_3.frag.glsl  glyph4_3.frag.glsl  qbezier_df.2.frag.glsl  qbezier_sdf.2.frag.glsl  quad_bezier.2.frag.glsl  rectangle.2.frag.glsl  tanh_dog.6.frag.glsl  thresh_dog.6.frag.glsl
res/default_shaders/: basic.frag.glsl  basic.vert.glsl
src/: assignment1.cpp  assignment2.cpp  assignment3.cpp  assignment4.cpp  assignment6.cpp  assignment7.cpp  glfw_wrapper.cpp  glfw_wrapper.h  glyph_sdf.cpp  glyph_view.cpp  main.cpp  red_triangle.cpp
src/aux/: CMakeLists.txt  camera.cpp  camera.h  common_objects.h  glfw_wrapper.cpp  glfw_wrapper.h
src/aux/font/: CMakeLists.txt  bezier.cpp  bezier.h  ttf.h  ttf_parser.cpp  ttf_types.h
src/aux/png/: image.h
src/gl/: CMakeLists.txt  buffer.h  shader.h  shader_object.cpp  shader_program.cpp  texture.cpp  texture.h  vao.cpp  vao.h
src/log/: CMakeLists.txt  log.cpp  log.h
